--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,20 +64,20 @@ body {
   background-color: #ecf0f1;
   font-family: helvetica, arial, sans-serif;
   font-size: 16px;
-  padding-top: 330px;
   -moz-transition: padding-top 0.5s ease;
   -o-transition: padding-top 0.5s ease;
   -webkit-transition: padding-top 0.5s ease;
   transition: padding-top 0.5s ease;
 }
 
-header {
+.header {
   width: 100%;
   height: 300px;
   background-color: #3498db;
   text-align: center;
   position: relative;
-  position: fixed;
+  /*position: fixed;*/
+  display: block;
   top: 0;
   overflow: hidden;
   -moz-transition: all 0.5s ease;
@@ -85,7 +85,7 @@ header {
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
-header h1 {
+.header h1 {
   font-size: 42px;
   color: #fff;
   line-height: 230px;
@@ -96,7 +96,7 @@ header h1 {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-header nav {
+.header nav {
   position: absolute;
   bottom: 0;
   height: 60px;
@@ -104,7 +104,7 @@ header nav {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.1);
 }
-header nav a {
+.header nav a {
   color: #fff;
   display: inline-block;
   padding: 10px 15px;
@@ -114,7 +114,7 @@ header nav a {
   -webkit-border-radius: 2px;
   border-radius: 2px;
 }
-header nav a:hover {
+.header nav a:hover {
   color: #007bff;
   background-color: #FFFFFF;
   -moz-box-shadow: 0 0 0 1px #888888;
@@ -184,8 +184,8 @@ body.sticky-header header h1 {
 .grid {
   margin-left: auto;
   margin-right: auto;
-  max-width: 320px;
-  max-width: 20rem;
+  max-width: 480px;
+  max-width: 25rem;
   width: 90%;
 }
 
@@ -367,4 +367,43 @@ p {
 .app-name{
   color: #FFFFFF;
 }
+.lb-login{
+  min-width: 106px;
+}
 /*login form*/
+.page-title{
+  font-size: 25px;
+  text-align: center;
+  color: #FFFFFF;
+  margin-top: 40px;
+}
+
+.blocks{
+  background-color: #FFFFFF;
+  box-shadow: 0 0 0 5px #FFFFFF;
+  display: block;
+  position: relative;
+  margin: 5px 0px;
+  padding: 10px 10px;
+}
+
+.sidebar{
+  margin-top: 5px;
+  padding-top: 5px;
+  height: 60vh;
+  overflow: auto;
+  background-color: #EEEEEE;
+}
+.content-data{
+  margin-top: 5px;
+  padding-top: 5px;
+  height: 60vh;
+  overflow: auto;
+  background-color: #EEEEEE;
+}
+.event-list-span{
+  font-size: 20px;
+}
+/*.control-label{
+  width: 100%;
+}
